--- a/TourMVC/Views/Home/Login.cshtml
+++ b/TourMVC/Views/Home/Login.cshtml
@@ -18,7 +18,7 @@
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                     <input type="email" name="email" class="form-control" />
-                    <label class="form-label">Email address</label>
+                    <label class="form-label">Địa chỉ Email</label>
                 </div>
 
                 <!-- Password input -->
